--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
     implementation "androidx.work:work-runtime-ktx:2.7.1"
 
+    implementation 'com.google.code.gson:gson:2.9.1'
+
     implementation "androidx.preference:preference-ktx:$rootProject.preferenceVersion"
 
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
