--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -1,3 +1,10 @@
+name: Build Debug Apk and Deploy
+
+on:
+  pull_request:
+    branches:
+      - dev
+
 jobs:
   # Debug build and upload apk to artifact
   build:
