Fix dev-ci workflow trigger

--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -2,8 +2,7 @@ name: Build Debug Apk and Deploy
 
 on:
   pull_request:
-    branches:
-      - dev
+    branches: [ "dev" ]
 
 jobs:
   # Debug build and upload apk to artifact
